Present wokring CA stub tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=accountBatch
+spring.application.propertiespath=C:\\Users\\domin\\workspace\\accountBatch\\target\\classes\\
+spring.application.ca_login=caterallen_login.html
+spring.application.ca_userid_boxid=userNo
+spring.application.ca_userid=0060999315
+browser=chrome
+
